Fixed paypal button on mobile

--- a/css/question.css
+++ b/css/question.css
@@ -13,10 +13,10 @@
     font-size: 14px;
     padding: 15px 0px 15px 0px;
     /*padding for iPhone X via WebKit https://webkit.org/blog/7929/designing-websites-for-iphone-x/*/
-    padding-top: env(safe-area-inset-top);
+    /* padding-top: env(safe-area-inset-top);
     padding-bottom: env(safe-area-inset-bottom);
     padding-left: env(safe-area-inset-left);
-    padding-right: env(safe-area-inset-right);
+    padding-right: env(safe-area-inset-right); */
     width: 100%;
     border-radius: 100;
     margin: 0 auto;
